apps/base/gerrit/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gerrit-ingress
  namespace: gerrit
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - gerrit.midnightthoughts.space
  rules:
    - backendRefs:
        - name: gerrit-replica-service
          port: 80
      matches:
        - path:
            value: /.*/git-upload-pack
            type: RegularExpression
      timeouts:
        request: 240s
        backendRequest: 0s
    - backendRefs:
        - name: gerrit-service
          port: 80
      matches:
        - path:
            value: /
            type: PathPrefix
      timeouts:
        request: 240s
        backendRequest: 0s
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: gerrit-ingress-cookie-policy
  namespace: gerrit
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: gerrit-ingress
  loadBalancer:
    type: ConsistentHash
    consistentHash:
      type: Cookie
      cookie:
        name: Gerrit_Session
        ttl: 3600s
        attributes:
          SameSite: Strict
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gerrit-403
  namespace: gerrit
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - gerrit.midnightthoughts.space
  rules:
    - backendRefs:
        - name: gerrit-replica-service
          port: 80
      matches:
        - path:
            value: /(a)?/plugins/high-availability/.*
            type: RegularExpression
      timeouts:
        request: 240s
        backendRequest: 0s
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: gerrit-403
  namespace: gerrit
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: gerrit-403
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        principal:
          clientCIDRs:
            - 127.0.0.1/32
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: gerrit-ssh
  namespace: gerrit
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ldap.midnightthoughts.space
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
      sectionName: gerrit-ssh
  rules:
    - backendRefs:
        - name: gerrit-service
          port: 29418
